# logsift

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  USAGE.md
src/logsift/: __init__.py  cli.py  filters.py  output.py  parsers.py  stream.py  time_utils.py
tests/: test_cli.py  test_filters.py  test_parsers.py  test_time.py
